2009-07-30  Mike Kestner  <mkestner@novell.com>

	* generator/InterfaceGen.cs: remove var keyword usage to fix build on
	.Net 2.0.  fix a couple mixed line endings as well.

2009-07-27  Mike Gorse  <mgorse@novell.com>

	* atk/Atk.metadata: Remove owned for Relation.GetTarget.

2009-07-26  Mike Kestner  <mkestner@novell.com>

	* bootstrap-for-the-insane: update the assembly versions and package
	version and kill the policies.  Give a little more helpful message of 
	doom.

2009-07-24  Christian Hoff  <christian_hoff@gmx.net>

	* parser/Makefile.am: Another build fix. Sigh...

2009-07-24  Christian Hoff  <christian_hoff@gmx.net>

	* generator/gapi3-codegen.in, parser/gapi3-fixup.in, parser/gapi3-parser.in:
	"svn add" a few missing files to resurrect the build.

2009-07-23  Christian Hoff  <christian_hoff@gmx.net>

	* configure.in.in, Makefile.include: Bump up GAPI version to 3.0.
	* bootstrap-2.14: Renamed to bootstrap-for-the-insane, added message
	of doom.	[Fixes #521449]

2009-07-21  Christian Hoff  <christian_hoff@gmx.net>

	* glib/GInterfaceAdapter.cs: Fix a leak related to GCHandles not being freed.
	Patch from Mike Kestner with a minor tweak by me. [Fixes #523306]

2009-07-13  Gabriel Burt  <gabriel.burt@gmail.com>

	* generator/GenBase.cs: Add AppendCustom override that you can pass the
	type name in, used to include .custom for Name + Adapter and Name +
	Implementor .custom files for interface gen.

	* generator/InterfaceGen.cs: Use the new AppendCustom override for the
	Name + Adapter.custom file, and add support for including custom file for
	the Name + Implementor interface; necessary to manually implement an
	interface method.

2009-07-12  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs: add ResolveType event and TypeResolutionHandler delegate
	declarations.  This mechanism supports the lazy registration of type mappings
	by bindings.  Patch from Sebastian with minor naming tweek.  [Fixes #497667]

2009-07-12  Mike Kestner  <mkestner@novell.com>
