@@ -1,3 +1,9 @@
+2009-08-01  Mike Kestner  <mkestner@novell.com>
+
+	* glib/GType.cs: lock the types hash to support threaded access and 
+	type registration.  Apparently gtype access/registration is threadsafe
+	in glib.  [Fixes #526229]
+
 2009-07-30  Mike Kestner  <mkestner@novell.com>
 
 	* generator/InterfaceGen.cs: remove var keyword usage to fix build on
